# DataScientist

./: .dockerignore  DEPLOY.md  Dockerfile  MANIFEST.in  Procfile  README.md  README_DEPLOY.md  SCALING.md  docker-compose.yml  notebook.ipynb  pyproject.toml  requirements.txt  setup.py  voila.json
archives/: cell0.py  cell1.py  cell10.py  cell11.py  cell12.py  cell13.py  cell14.py  cell15.py  cell16.py  cell2.py  cell3.py  cell4.py  cell5.py  cell6.py  cell7.py  cell8.py  cell9.py
config/: default.toml
datasets/ontologies/: its.pedagogical.owl  itsdomain.owl
ml_pipeline/: MANIFEST.in  README.md  __init__.py  config_loader.py  default.toml  pyproject.toml  setup.py  state.py  styles.py
ml_pipeline/steps/: __init__.py  s00_install.py  s01_loading.py  s02_domains.py  s03_eda.py  s04_feature_eng.py  s04_ontology.py  s05_cleaning.py  s06_encoding.py  s07_split.py  s08_modeling.py  s09_metrics.py  s10_optimization.py  s11_predictions.py  s12_export.py
